<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HKTransETA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Code Title -->
    <string name="followed_stops">Followed Stops</string>
    <string name="kmb_full">KMB/LWB</string>
    <string name="kmb_short">KMB</string>
    <string name="nwfb_full">NWFB/CTB</string>
    <string name="nwfb_short">NWFB</string>
    <string name="tram">Tram</string>
    <string name="ferry">Ferry</string>
    <string name="mtr">MTR</string>
    <string name="settings">Settings</string>

    <!-- Menu Items -->
    <!-- Main Menu Items -->
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="route_list">Route list</string>
    <string name="edit">Edit</string>
    <string name="add_shortcut">Add shortcut</string>

    <!-- Route Menu Items -->
    <string name="maps">Maps</string>
    <string name="switch_to">Switch to %1$s</string>
    <string name="open_website">Open website</string>
    <string name="force_update">Force update</string>

    <!-- KMB Bottom Menu Items -->
    <string name="timetable">Timetable</string>
    <string name="route">Route</string>
    <string name="interchange">Interchange</string>
    <string name="notice">Notice</string>

    <!-- Settings Menu Items -->
    <string name="open_in_play_store">Open in Play Store</string>

    <!-- Common -->
    <!-- Common Strings -->
    <string name="to">To\u0020</string>
    <string name="loading">Loading &#8230;</string>
    <string name="no_data">No data</string>
    <string name="error_occur">Error occur</string>

    <!-- Common Symbol -->
    <string name="arrow_one_way" translatable="false">\u0020→\u0020</string>
    <string name="arrow_two_ways" translatable="false">\u0020⇄\u0020</string>
    <string name="arrow_circular" translatable="false">\u0020⟲\u0020</string>
    <string name="symbol_special_route" translatable="false">#</string>
    
    <!-- Route Desc -->
    <string name="overnight">overnight</string>
    <string name="airport">airport</string>
    <string name="cross_harbor">cross harbor</string>
    <string name="special">special</string>
    <string name="line_zh_only"></string>
    <string name="space_en_only">\u0020</string>

    <!-- Settings -->
    <!-- General Settings -->
    <string name="general_settings">General Settings</string>
    <string name="eta_update_frequency">ETA auto update frequency</string>
    <string-array name="eta_update_frequency_entries">
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds (Default)</item>
        <item>45 seconds</item>
        <item>60 seconds</item>
        <item>Never</item>
    </string-array>
    <string-array name="eta_update_frequency_values" translatable="false">
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
    <string name="database_update_frequency">Database update frequency</string>
    <string-array name="database_update_frequency_entries">
        <item>4 hours</item>
        <item>8 hours (Default)</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>48 hours</item>
    </string-array>
    <string-array name="database_update_frequency_values" translatable="false">
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>
    <string name="clear_route_data">Clear route data</string>
    <string name="clear_route_data_summary">Remove route data from this device</string>
    <string name="clear_route_data_conform_msg">Are you sure to to remove all route data?</string>
    <string name="clear_followed_stops">Clear followed stops</string>
    <string name="clear_followed_stops_summary">Remove followed stops from this device</string>
    <string name="clear_followed_stops_conform_msg">Are you sure to to remove all followed stops?</string>

    <string name="parameters">Parameters</string>

    <string name="about">About</string>
    <string name="app_name_summary" translatable="false">Simon Hui \u00A9 2017</string>
    <string name="app_version">App version</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="open_source_licenses_summary">License details for open source software</string>
    <string name="open_source_licenses_path" translatable="false">file:///android_asset/licenses.html</string>

    <!-- Advanced Settings -->
    <string name="advanced_settings">Advanced Settings</string>

    <!-- Testing -->
    <string name="testing">Testing</string>
    <string name="enabled_activities">Enabled activities</string>
    <string-array name="activities_entries">
        <item>@string/kmb_full</item>
        <item>@string/nwfb_full</item>
        <item>@string/tram</item>
        <item>@string/ferry</item>
        <item>@string/mtr</item>
    </string-array>
    <string-array name="activities_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="activities_production_values" translatable="false">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_base_tabbed">BaseTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_maps">Maps</string>

</resources>
