<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.kmb.KmbActivity">

    <item
        android:id="@+id/menu_timetable"
        android:title="@string/timetable"
        android:orderInCategory="10"
        android:icon="@drawable/ic_menu_timetable" />

    <item
        android:id="@+id/menu_route"
        android:title="@string/route"
        android:orderInCategory="20"
        android:icon="@drawable/ic_menu_route"
        android:checked="true"/>

    <item
        android:id="@+id/menu_interchange"
        android:title="@string/interchange"
        android:orderInCategory="30"
        android:icon="@drawable/ic_menu_interchange" />

    <item
        android:id="@+id/menu_notice"
        android:title="@string/notice"
        android:orderInCategory="40"
        android:icon="@drawable/ic_menu_notice" />

</menu>
